<resources>
    <string name="app_name">RowdyGuard</string>
    <string name="password_title">PasswordTitle</string>
    <string name="password_username">PasswordUsername</string>
    <string name="password_password">PasswordPassword</string>
    <string name="password_url">PasswordURL</string>
    <string name="no_password_error">No Passwords Detected</string>


    <string name="password_enter_new_user">Enter a new username:</string>
    <string name="password_enter_new_title">Enter a new title:</string>
    <string name="password_enter_new_pass">Enter a new password:</string>
    <string name="password_enter_new_url">Enter a new URL:</string>
    <string name="password_submit_changes">Submit Changes</string>
    <string name="password_title">PasswordTitle</string>
    <string name="password_username">PasswordUsername</string>
    <string name="password_password">PasswordPassword</string>
    <string name="password_url">PasswordURL</string>
    <string name="vault_view_title">These Passwords</string>
    <string name="no_password_error">No Passwords Detected</string>

    <string name="settings_title">Settings</string>
    <string name="invertColors_title">Invert Colors</string>
    <string name="changePassword_textbox">Change Password</string>
    <string name="logOut_button">Log Out</string>

</resources>